--- a/main.css
+++ b/main.css
@@ -3,20 +3,25 @@
 
 body {
     background-image: linear-gradient(rgb(71, 71, 71),rgb(34, 34, 34));
+    background-position-x: center;
     background-repeat: no-repeat;
-    background-size: cover;
     background-color:rgb(34, 34, 34) ;
-    width: auto;
+
     margin: 0px;
+}
+
+
+
+.toppage {
+    justify-content: space-between;
+    display: flex;
 }
 
 #main_page {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color:red;
     font-weight:bold;
-    padding: 0px;
-    font-size:100px;
-    position: absolute;
+    font-size:8vw;
 }
 #main_page:hover {
     color:aliceblue;
@@ -27,7 +32,8 @@ body {
     text-align: left;
     color: white;
     font-weight:bold;
-    font-size: 30px;
+    font-size: 3vw;
+    
 }
 
 .theHead {
@@ -35,27 +41,23 @@ body {
     text-align: center;
 }
 
-.login {
-    
-    margin: 2px;
+#login_p {
+    width:200px;
     color:white;
-     
 }
+#login_p .mainFont {
+    margin:2px;
+}
+
 .web{
 height: 1200px;
 width:auto;
-
 display:block;
 }
 
-.cars {
-background-color: red;
-height: 500px;
-width:100px;
-}
+
 #cars_Image {
-    height: 200px;
-    
+    width:26vw;
     margin: 8px;
 }
 .show {
@@ -70,21 +72,13 @@ width:100px;
 #demo {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size:40px;
-    padding: right 0;
     color:white;
     text-align:center;
     background-color: red;
     font-weight:bold;
-    height: 50px;
 }
 
-#login_p {
-    margin-left:85%;
-    height:150px;
-    width:200px;
-    
-    text-align: left;
-}
+
 
 
 .footer {
@@ -100,7 +94,7 @@ width:100px;
 .logo {
     background-color:rgb(49, 49, 49);
     height:auto;
-    width: 9%;
+    width: 120px;
     padding:10px;
     display: grid;
     float: left;
@@ -116,11 +110,18 @@ width:100px;
 
 .contaner {
     background-color:rgb(43, 43, 43);
-    height:auto;
-    width:370px;
+    width:27vw;
     margin: 10px;
     display: inline-block;
     
    
 }
 
+@media(min-width: 1000) {
+
+    .contaner {
+     width:100px;
+     background-color: brown;
+    }
+
+}
