--- a/main.css
+++ b/main.css
@@ -100,27 +100,15 @@ width:auto;
     margin: 8px;
 }
 .show {
+    position: relative;
     display: none;
     flex-wrap:wrap;
+    justify-content: space-around;
     padding: 5px;
-    margin-left:150px;
-   
-    
+    animation-name: display;
+    animation-duration: 0.5s;
+    animation-iteration-count: 1;
 }
-
-
-
-#demo {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size:40px;
-    color:white;
-    text-align:center;
-    background-color: red;
-    font-weight:bold;
-}
-
-
-
 
 .footer {
     margin-top:100px;
@@ -129,7 +117,7 @@ width:auto;
     width: 9%;
     padding:10px;
     
-    
+
 }
 
 .logo {
@@ -159,9 +147,12 @@ width:auto;
     display: flex;
     flex-direction: column;
     
-    
-   
+    border-radius: 10px;
 }
+
+
+
+
 
 @media(min-width: 1000) {
 
@@ -172,7 +163,12 @@ width:auto;
 
 }
 
-@keyframes rre{
-0% {background-color: aliceblue; };
+@keyframes flashing{
+0% {background-color: white; };
 100% {background-color: none; };
+}
+
+@keyframes display{
+ 0% {  margin-right:30px};
+ 100% {  margin-right:0px};
 }
