--- a/main.css
+++ b/main.css
@@ -40,6 +40,15 @@ body {
     
 }
 
+.SecondFont {
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    text-align: left;
+    color: white;
+    font-weight:bold;
+    font-size: 2vw;
+    margin-top: 20px; 
+}
+
 .theHead {
     background-color: antiquewhite;
     text-align: center;
@@ -74,12 +83,12 @@ body {
     font-size: 5vw;
    color:white;
    height:7vw;
-   padding:0;
+   padding-left:10px;
    margin:0;
 }
 
 .search button {
-    padding:0;
+    padding:10px;
     margin:0;
     height: 7vw;
     border:0;
@@ -123,8 +132,8 @@ width:auto;
 .logo {
     background-color:rgb(49, 49, 49);
     height:auto;
-    width: 120px;
-    padding:10px;
+    width: auto;
+    padding:5px;
     display: grid;
     float: left;
 }
@@ -136,7 +145,12 @@ width:auto;
     padding:0px;
     background: none;
     border: 0;
+    width: 9vw;
+    height: 9vw;
+}
 
+.car_logo:hover{
+    background-color: rgb(31, 31, 31);
 }
 
 .contaner {
